--- a/src/components/TVShowDetail/TVShowDetail.module.scss
+++ b/src/components/TVShowDetail/TVShowDetail.module.scss
@@ -117,14 +117,13 @@
 
 .homeLink {
   font-size: 12px;
-  
 }
 
 .scheduleDays {
   padding-right: 10px;
-  border-right: 1px solid rgb(190, 190, 190);
 }
 
 .scheduleTime {
   padding-left: 10px;
+  border-left: 1px solid rgb(190, 190, 190);
 }
